@@ -1,7 +1,7 @@
 {% load i18n %}
 {% blocktrans with site_name=site.name %}
 The following user ({{ user }}) has asked to register an account at
-{{ site_name }}.  
+{{ site_name }}.
 {% endblocktrans %}
 {% blocktrans %}
 To approve this, please click the following link.
