@@ -1,6 +1,12 @@
 {% extends "registration/registration_base.html" %}
 {% load i18n %}
 
+{% block meta %}
+<!-- NOTE(joshblum): This prevents leaking the password reset token via the
+   Referer header to any 3rd party apps on the page. -->
+<meta name="referrer" content="origin">
+{% endblock %}
+
 {% block title %}{% trans "Confirm password reset" %}{% endblock %}
 
 {% block content %}
