@@ -13,7 +13,9 @@ To reset your password, please click the following link, or copy and paste it
 into your web browser:
 {% endblocktrans %}
 
-{{ protocol }}://{{ domain }}{% url 'auth_password_reset_confirm' uid token %}
+<a rel="noreferrer" href="{{ protocol }}://{{ domain }}{% url 'auth_password_reset_confirm' uid token %}">
+  {{ protocol }}://{{ domain }}{% url 'auth_password_reset_confirm' uid token %}
+</a>
 
 {% blocktrans %}Your username, in case you've forgotten:{% endblocktrans %} {{ user.username }}
 
