@@ -4,6 +4,8 @@ django-registration-redux changelog
 
 Version 1.7, TBD
 ----------------
+* Fix security issue of leaking password reset token through the Referer
+header. - `#268 <https://github.com/macropin/django-registration/pull/268>_`
 * Fix migration issue when using multiple databases - `#264 <https://github.com/macropin/django-registration/pull/264>_`
 * Improve German translation - `#259 <https://github.com/macropin/django-registration/pull/259>_`
 
